CRT edit - add/remove voices from slots

--- a/resources/app/viewCRT.html
+++ b/resources/app/viewCRT.html
@@ -64,51 +64,75 @@
 			<tbody>
 				<tr>
 					<th scope="row">1</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_1"></span></td>
+					<td><span onclick="viewCRT.add(1)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(1)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_1"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">2</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_2"></span></td>
+					<td><span onclick="viewCRT.add(2)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(2)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_2"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">3</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_3"></span></td>
+					<td><span onclick="viewCRT.add(3)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(3)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_3"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">4</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_4"></span></td>
+					<td><span onclick="viewCRT.add(4)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(4)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_4"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">5</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_5"></span></td>
+					<td><span onclick="viewCRT.add(5)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(5)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_5"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">6</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_6"></span></td>
+					<td><span onclick="viewCRT.add(6)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(6)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_6"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">7</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_7"></span></td>
+					<td><span onclick="viewCRT.add(7)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(7)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_7"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">8</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_8"></span></td>
+					<td><span onclick="viewCRT.add(8)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(8)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_8"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">9</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_9"></span></td>
+					<td><span onclick="viewCRT.add(9)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(9)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_9"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">10</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_10"></span></td>
+					<td><span onclick="viewCRT.add(10)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(10)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_10"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">11</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_11"></span></td>
+					<td><span onclick="viewCRT.add(11)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(11)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_11"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">12</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_12"></span></td>
+					<td><span onclick="viewCRT.add(12)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(12)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_12"></span></td>
 				</tr>
 			</tbody>
 		</table>
@@ -129,51 +153,75 @@
 
 				<tr>
 					<th scope="row">13</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_13"></span></td>
+					<td><span onclick="viewCRT.add(13)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(13)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_13"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">14</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_14"></span></td>
+					<td><span onclick="viewCRT.add(14)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(14)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_14"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">15</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_15"></span></td>
+					<td><span onclick="viewCRT.add(15)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(15)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_15"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">16</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_16"></span></td>
+					<td><span onclick="viewCRT.add(16)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(16)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_16"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">17</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_17"></span></td>
+					<td><span onclick="viewCRT.add(17)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(17)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_17"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">18</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_18"></span></td>
+					<td><span onclick="viewCRT.add(18)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(18)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_18"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">19</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_19"></span></td>
+					<td><span onclick="viewCRT.add(19)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(19)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_19"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">20</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_20"></span></td>
+					<td><span onclick="viewCRT.add(20)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(20)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_20"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">21</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_21"></span></td>
+					<td><span onclick="viewCRT.add(21)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(21)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_21"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">22</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_22"></span></td>
+					<td><span onclick="viewCRT.add(22)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(22)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_22"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">23</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_23"></span></td>
+					<td><span onclick="viewCRT.add(23)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(23)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_23"></span></td>
 				</tr>
 				<tr>
 					<th scope="row">24</th>
-					<td><span class="crt_voice" style="cursor:pointer;" id="crt_voicename_24"></span></td>
+					<td><span onclick="viewCRT.add(24)" class="crtSlotAddButton">&#10133;</span>
+						<span onclick="viewCRT.clear(24)" class="crtSlotClearButton">&#10134;</span>
+						<span class="crt_voice" style="cursor:pointer;" id="crt_voicename_24"></span></td>
 				</tr>
 			</tbody>
 	</div>
