--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -1,4 +1,4 @@
-<span id="backToCRT" onclick="index.viewLoadedCRT()" style="cursor: pointer;">
+<span id="backToCRT" onclick="viewCRT.viewLoadedCRT()" style="cursor: pointer;">
 	<span id="vce_crt_name"></span>
 	&nbsp;&nbsp;&gt;&nbsp;&nbsp;
 </span>
