fix jquery path

--- a/resources/app/prefs.html
+++ b/resources/app/prefs.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="static/css/bootstrap.min-darkly.css">
     <link rel="stylesheet" href="static/css/base.css">
 
-    <script src="static/js/jquery-3.4.1.slim.js"></script>
+    <script src="static/js/jquery-3.4.1.min.js"></script>
     <script src="static/js/popper.min.js"></script>
     <script src="static/js/bootstrap.min.js"></script>
     <script src="static/js/index.js"></script>
