--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -127,7 +127,7 @@ TEST a "more button" design:
 					<div class="headerSeparator p-2"></div>
 
 					<div class="navbar-text dropdown" style="width:30em;">
-						<table onclick="index.dropdownMenu('connectDropdown-content');" class="dropbtn">
+						<table id="connectButton" onclick="index.dropdownMenu('connectDropdown-content');" class="dropbtn">
 							<tr>
 								<td class="centered"><img id="connectButtonImg" src="static/images/grey-button-off-full.png" height="30">
 								</td>
@@ -144,7 +144,7 @@ TEST a "more button" design:
 					</div>
 
 					<div class="navbar-text dropdown" style="width:30em;">
-						<table onclick="index.dropdownMenu('loadSaveDropdown-content');" class="dropbtn">
+						<table id="loadSaveButton"onclick="index.dropdownMenu('loadSaveDropdown-content');" class="dropbtn">
 							<tr>
 								<td class="centered"><img src="static/images/grey-button-off-full.png" height="30"></td>
 							</tr>
