--- a/resources/app/viewCRT.html
+++ b/resources/app/viewCRT.html
@@ -4,7 +4,7 @@
 			<div class="flex-grow-1 p-2"></div>
 
 			<div class="navbar-text" style="width:30em;">
-				<table onclick="viewCRT.editCRT(crt_name,crt_path);" class="dropbtn">
+				<table id="editCRTButton" onclick="viewCRT.editCRT(crt_name,crt_path);" class="dropbtn">
 					<tr>
 						<td class="centered"><img id="editCRTButtonImg" src="static/images/red-button-off-full.png"
 								height="30"></td>
@@ -15,8 +15,8 @@
 				</table>
 			</div>
 
-			<div id="saveCRTButton" style="display: none;" class="navbar-text" style="width:30em;">
-				<table onclick="viewCRT.saveCRT(crt_name,crt_path);"
+			<div id="saveCRTButtonDiv" style="display: none;" class="navbar-text" style="width:30em;">
+				<table id="saveCRTButton" onclick="viewCRT.saveCRT(crt_name,crt_path);"
 					class="dropbtn">
 					<tr>
 						<td class="centered"><img src="static/images/grey-button-off-full.png" height="30"></td>
@@ -28,7 +28,7 @@
 			</div>
 
 			<div class="navbar-text" style="width:30em;">
-				<table onclick="viewCRT.loadCRT(crt_name,crt_path);" class="dropbtn">
+				<table id="loadCRTButton" onclick="viewCRT.loadCRT(crt_name,crt_path);" class="dropbtn">
 					<tr>
 						<td class="centered"><img src="static/images/grey-button-off-full.png" height="30"></td>
 					</tr>
