patch diagrams computed dymaically from the patch byte values

--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -17,7 +17,7 @@
 	<script src="static/js/Chart.bundle.min.js"></script>
 
 	<script src="static/js/lodash-4.17.15.js"></script>
-
+        
 	<script src="static/js/index.js"></script>
 	<script src="static/js/debug.js"></script>
 	<script src="static/js/viewVCE.js"></script>
@@ -37,8 +37,13 @@
 		delete window.exports;
 		delete window.module;
 	</script>
-	<script src="static/js/jquery.bootstrap-touchspin.js"></script>
-	<script>
+
+        <script src="static/js/jquery.bootstrap-touchspin.js"></script>
+
+	<script src="static/js/dagre-0.8.5.min.js"></script>
+        <script src="static/js/nomnoml-0.8.0.js"></script>
+
+        <script>
 		window.require = window.nodeRequire;
 		window.exports = window.nodeExports;
 		window.module = window.nodeModule;
