link to user manual from Help button

--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -192,6 +192,7 @@ TEST a "more button" design:
 						<div class="dropdown-content" id="helpDropdown-content">
 							<a id="aboutMenuItem" href="#" onclick="index.showAbout();">About</a>
 							<a id="preferencesMenuItem" href="#" onclick="index.showPreferences();">Preferences</a>
+							<a href="https://chinenual.github.io/synergize/docs" target="_blank">User Manual</a>
 						</div>
 					</div>
 
