--- a/resources/app/prefs.html
+++ b/resources/app/prefs.html
@@ -1,53 +1,63 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
-  <head>
-    <title>Synergize Preferences</title>
-    <meta charset="UTF-8">
-    
-    <link rel="stylesheet" href="static/css/bootstrap.min-darkly.css">
-    <link rel="stylesheet" href="static/css/base.css">
 
-    <script src="static/js/jquery-3.4.1.min.js"></script>
-    <script src="static/js/popper.min.js"></script>
-    <script src="static/js/bootstrap.min.js"></script>
-    <script src="static/js/index.js"></script>
-    <script src="static/js/prefs.js"></script>
-  </head>
-  
-  <body>    
+<head>
+	<title>Synergize Preferences</title>
+	<meta charset="UTF-8">
 
-    <div class="container">
-      <form>
-	<div class="form-group">
-	  <label for="serialPort">Serial Port</label>
-	  <!-- HACK: want a file dialog on Mac; a straight text box on
+	<link rel="stylesheet" href="static/css/bootstrap.min-darkly.css">
+	<link rel="stylesheet" href="static/css/base.css">
+
+	<script src="static/js/jquery-3.4.1.min.js"></script>
+	<script src="static/js/popper.min.js"></script>
+	<script src="static/js/bootstrap.min.js"></script>
+	<script src="static/js/index.js"></script>
+	<script src="static/js/prefs.js"></script>
+</head>
+
+<body>
+
+	<div class="container">
+		<form>
+			<div class="form-group">
+				<label for="serialPort">Serial Port</label>
+				<!-- HACK: want a file dialog on Mac; a straight text box on
 	  * windows -  make a straight text box and add the onclick
 	  * via javascript at initialization.
 	  -->
-	  <input type="string" class="form-control" id="serialPort">
+				<input type="string" class="form-control" id="serialPort">
+			</div>
+			<div class="form-group">
+				<label for="serialBaud">Serial Baud Rate</label>
+				<select type="string" class="form-control" id="serialBaud">
+					<option value="19200">19200</option>
+					<option value="9600">9600</option>
+					<option value="4800">4800</option>
+					<option value="2400">2400</option>
+					<option value="1200">1200</option>
+					<option value="600">600</option>
+				</select>
+			</div>
+			<div class="form-group">
+				<label for="libraryPath">Voice Library Location</label>
+				<input type="string" class="form-control" id="libraryPath"
+					onclick="prefs.libraryFolderDialog(this,this.value);" />
+			</div>
+			<div class="form-group">
+				<label for="useMidi">Enable MIDI Control Surface</label>
+				<input type="checkbox" class="form-control" id="useMidi" onclick="prefs.toggleMidi(this);"
+					value="true" />
+				<label for="midiInterface">MIDI Interface</label>
+				<input type="string" class="form-control" id="midiInterface" />
+				<label for="midiDeviceConfig">MIDI Interface</label>
+				<input type="string" class="form-control" id="midiDeviceConfig" />
+			</div>
+			<button type="cancel" onclick="prefs.cancelAndClose();">Cancel</button>
+			<button type="submit" class="btn btn-primary" onclick="prefs.saveAndClose();">Save</button>
+		</form>
 	</div>
-	<div class="form-group">
-	  <label for="serialBaud">Serial Baud Rate</label>
-	  <select type="string" class="form-control" id="serialBaud">
-	    <option value="19200">19200</option>
-	    <option value="9600">9600</option>
-	    <option value="4800">4800</option>
-	    <option value="2400">2400</option>
-	    <option value="1200">1200</option>
-	    <option value="600">600</option>
-	  </select>
-	</div>
-	<div class="form-group">
-	  <label for="libraryPath">Voice Library Location</label>
-	  <input type="string" class="form-control" id="libraryPath"
-		 onclick="prefs.libraryFolderDialog(this,this.value);" >
-	</div>
-	<button type="cancel" onclick="prefs.cancelAndClose();">Cancel</button>
-	<button type="submit" class="btn btn-primary" onclick="prefs.saveAndClose();">Save</button>
-      </form>      
-    </div>
-    
-    <script type="text/javascript">
-      prefs.init();
-    </script>
-</form>
+
+	<script type="text/javascript">
+		prefs.init();
+	</script>
+	</form>
