--- a/resources/app/prefs.html
+++ b/resources/app/prefs.html
@@ -8,7 +8,9 @@
 	<link rel="stylesheet" href="static/css/bootstrap.min-darkly.css">
 	<link rel="stylesheet" href="static/css/base.css">
 
-	<script src="static/js/jquery-3.4.1.min.js"></script>
+	<script src="static/js/jquery-3.4.1.min.js" type="text/javascript"
+		onload="window.$ = window.jQuery = module.exports;"></script>
+
 	<script src="static/js/popper.min.js"></script>
 	<script src="static/js/bootstrap.min.js"></script>
 	<script src="static/js/index.js"></script>
