--- a/resources/app/prefs.html
+++ b/resources/app/prefs.html
@@ -46,6 +46,16 @@
 					onclick="prefs.libraryFolderDialog(this,this.value);" />
 			</div>
 			<div class="form-group">
+				<label for="useOsc">Enable OSC Control Surface</label>
+				<input type="checkbox" class="form-control" id="useOsc" onclick="prefs.toggleOsc(this);" value="true" />
+				<label for="oscPort">OSC Listening Port</label>
+				<input type="integer" class="form-control" id="oscPort" />
+				<label for="oscCSurfaceAddress">Control Surface Address</label>
+				<input type="string" class="form-control" id="oscCSurfaceAddress" />
+				<label for="oscCSurfacePort">Control Surface Port</label>
+				<input type="integer" class="form-control" id="oscCSurfacePort" />
+			</div>
+			<div class="form-group">
 				<label for="useMidi">Enable MIDI Control Surface</label>
 				<input type="checkbox" class="form-control" id="useMidi" onclick="prefs.toggleMidi(this);"
 					value="true" />
