--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -248,35 +248,56 @@ TEST a "more button" design:
 				</div>
 			</div>
 		</div>
+		<!-- Modal -->
+		<div class=" modal fade" id="chooseZeroconfModal" tabindex="-1" role="dialog" aria-hidden="true">
+							<div class="modal-dialog" role="document">
+								<div class="modal-content">
+									<form>
+										<div class="modal-header">
+											<h5 class="modal-title" id="chooseZeroconfPrompt">Confirm Title</h5>
+										</div>
+										<div class="modal-body" id="chooseZeroconfItems">
+
+										</div>
+										<div class="modal-footer">
+											<button type="button" class="btn btn-secondary" data-dismiss="modal"
+												id="chooseZeroconfCancelButton">Cancel</button>
+											<button type="button" class="btn btn-primary" data-dismiss="modal"
+												id="chooseZeroconfOKButton"">OK</button>
+					</div>
+									</form>
+				</div>
+			</div>
+		</div>
 		
 		<div class=" row flex-fill" style="min-height:0">
-							<div class="col-3 mh-100 hiddenscroll">
-								<div id="path"></div>
-								<div id="dirs"></div>
-								<div id="CRTfiles"></div>
-								<div id="SYNfiles"></div>
-								<div id="VCEfiles"></div>
-							</div>
+												<div class="col-3 mh-100 hiddenscroll">
+													<div id="path"></div>
+													<div id="dirs"></div>
+													<div id="CRTfiles"></div>
+													<div id="SYNfiles"></div>
+													<div id="VCEfiles"></div>
+												</div>
 
-							<div class="col mh-100 mainSeparator"></div>
+												<div class="col mh-100 mainSeparator"></div>
 
-							<div class="col mh-100">
+												<div class="col mh-100">
 
-								<div id="spinner" style="display:none;">
-									<div class="spinner-border text-info"" role=" status">
-										<span class="sr-only">Loading...</span>
-									</div>
+													<div id="spinner" style="display:none;">
+														<div class="spinner-border text-info"" role=" status">
+															<span class="sr-only">Loading...</span>
+														</div>
 
+													</div>
+
+													<div class="right hiddenscroll" id="content"> </div>
+												</div>
+										</div>
 								</div>
 
-								<div class="right hiddenscroll" id="content"> </div>
-							</div>
-					</div>
-				</div>
-
-				<script type="text/javascript">
-					index.init();
-				</script>
+								<script type="text/javascript">
+									index.init();
+								</script>
 
 </body>
 
