refactor to better support control surface selection in javascript

--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -262,6 +262,8 @@ TEST a "more button" design:
 										<div class="modal-footer">
 											<button type="button" class="btn btn-secondary" data-dismiss="modal"
 												id="chooseZeroconfCancelButton">Cancel</button>
+											<button type="button" class="btn btn-secondary" data-dismiss="modal"
+												id="chooseZeroconfRescanButton">Rescan</button>
 											<button type="button" class="btn btn-primary" data-dismiss="modal"
 												id="chooseZeroconfOKButton"">OK</button>
 					</div>
