add connect to all initiator functions in javascript

--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -144,7 +144,8 @@ TEST a "more button" design:
 							</tr>
 						</table>
 						<div class="dropdown-content" id="connectDropdown-content">
-							<a href="#" onclick="viewVCE_voice.connectSynergy();" id="connectSynergyMenuItem">Connect to
+							<a href="#" onclick="viewVCE_voice.connectSynergy(function(){});"
+								id="connectSynergyMenuItem">Connect to
 								Synergy</a>
 							<a href="#" onclick="index.disconnectSynergy();" id="disconnectSynergyMenuItem">Disconnect
 								Synergy</a>
