--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -125,7 +125,7 @@ TEST a "more button" design:
 	    </div>
 -->
 
-					<div class="navbar-text p-2">
+					<div class="navbar-text p-2 col-md-3">
 						<span class="buttonText">Synergy:<br>&nbsp;&nbsp;</span><span class="buttonText"
 							id="firmwareVersion">Not Connected</span>
 					</div>
