--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -127,11 +127,11 @@ TEST a "more button" design:
 
 					<div class="navbar-text p-2 col-md-3">
 						<div>
-							<span class="buttonText"><b>Synergy:</b><br>&nbsp;&nbsp;</span>
+							<span class="buttonText"><b>Synergy:</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 							<span class="buttonText" id="synergyName"></span>
 						</div>
 						<div id="controlSurfaceStatus" style="display: none;">
-							<span class="buttonText"><b>Control Surface:</b><br>&nbsp;&nbsp;</span>
+							<span class="buttonText"><b>Control Surface:</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 							<span class="buttonText" id="controlSurfaceName"></span>
 						</div>
 					</div>
