cs and synergy selection fix for voicing mode

--- a/resources/app/about.html
+++ b/resources/app/about.html
@@ -21,7 +21,7 @@
       Version: <span id="version">{{.Version}}</span>
       <div id="updateAvailable" style="display:none;">
         A new version of Synergize is available.<br>
-        <button onclick="shell.openExternal('https://github.com/chinenual/synergize/releases/latest')"">Get Latest Version</button>
+        <button onclick="shell.openExternal('https://github.com/chinenual/synergize/releases/latest')">Get Latest Version</button>
       </div>
       <br>
       <br>
