--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -98,7 +98,7 @@
 							<input id="del-osc" type='button' value='-'
 								onclick=' viewVCE_voice.setNumOscillators(vce.Head.VOITAB)' />
 							<input id="add-osc" type='button' value='+'
-								onclick=viewVCE_voice.setNumOscillators(vce.Head.VOITAB+2)' />
+								onclick='viewVCE_voice.setNumOscillators(vce.Head.VOITAB+2)' />
 						</div>
 					</td>
 				</tr>
