--- a/resources/app/prefs.html
+++ b/resources/app/prefs.html
@@ -66,16 +66,16 @@
 				</div>
 			</div>
 			<div class="form-group row">
-				<label class="col-md-3 col-form-label" for="oscAutoConfig">Zerconf Control Surface</label>
-				<div class="col-md-7">
-					<input type="checkbox" class="form-control" id="oscAutoConfig" onclick="prefs.toggleOsc()"
-						value="true" />
-				</div>
-			</div>
-			<div class="form-group row">
 				<label class="col-md-3 col-form-label" for="oscPort">OSC Listening Port</label>
 				<div class="col-md-7">
 					<input type="integer" class="form-control" id="oscPort" />
+				</div>
+			</div>
+			<div class="form-group row">
+				<label class="col-md-3 col-form-label" for="oscAutoConfig">Zeroconf Control Surface</label>
+				<div class="col-md-7">
+					<input type="checkbox" class="form-control" id="oscAutoConfig" onclick="prefs.toggleOsc()"
+						value="true" />
 				</div>
 			</div>
 			<div class="form-group row">
