--- a/resources/app/prefs.html
+++ b/resources/app/prefs.html
@@ -28,6 +28,13 @@
 						onclick="prefs.libraryFolderDialog(this,this.value);" />
 				</div>
 			</div>
+
+			<div class="form-group row">
+				<label class="col-md-3 col-form-label" for="useSerial">Enable Hardware Serial Port</label>
+				<div class="col-md-7">
+					<input type="checkbox" class="form-control" id="useSerial" onclick="prefs.toggleOsc();" value="true" />
+				</div>
+			</div>
 			<div class="form-group row">
 				<label class="col-md-3 col-form-label" for="serialPort">Serial Port (blank if no hardware
 					Synergy)</label>
